--- a/doctor.html
+++ b/doctor.html
@@ -52,6 +52,33 @@
       </table>
       <p id="appt-status"></p>
     </section>
+    <section id="appointment-history">
+  <h3>Historia wizyt</h3>
+  <label for="history-email">Wyszukaj po e-mailu klienta:</label>
+  <input type="text" id="history-email" placeholder="np. jan.kowalski@poczta.pl" />
+  <button id="btn-show-history">Pokaż historię</button>
+
+  <h4>Przyszłe wizyty</h4>
+  <table id="future-table">
+    <thead>
+      <tr>
+        <th>Data</th><th>Email</th><th>Godzina</th><th>Zwierzak</th><th>Rodzaj</th><th>Akcja</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <h4>Przeszłe wizyty</h4>
+  <table id="past-table">
+    <thead>
+      <tr>
+        <th>Data</th><th>Email</th><th>Godzina</th><th>Zwierzak</th><th>Rodzaj</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <p id="history-status"></p>
+</section>
   </div>
 
   <div id="errorMessage" class="container error hidden">
@@ -123,6 +150,11 @@
       const statusP    = document.getElementById("appt-status");
       const doctorId   = auth.currentUser.uid;
       const bookingsRef = collection(db, "users", doctorId, "bookings");
+      const historyEmailInput = document.getElementById("history-email");
+      const btnShowHistory    = document.getElementById("btn-show-history");
+      const futureBody        = document.querySelector("#future-table tbody");
+      const pastBody          = document.querySelector("#past-table tbody");
+      const historyStatus     = document.getElementById("history-status");
 
       async function loadAppointments() {
   tableBody.innerHTML = "";
@@ -168,6 +200,74 @@
   });
 }
 
+      async function loadHistory(filterEmail) {
+  futureBody.innerHTML = "";
+  pastBody.innerHTML   = "";
+  historyStatus.textContent = "";
+
+  // 1) pobierz wszystkie wizyty doktora
+  const snap = await getDocs(bookingsRef);
+  const today = new Date().toISOString().slice(0,10);
+
+  // 2) posegmentuj, posortuj, doładuj emaile (jak wcześniej)
+  let bookings = snap.docs.map(d => ({ id:d.id, ...d.data() }));
+  // jeśli filterEmail, zostaw tylko dla danego userId->email
+  if (filterEmail) {
+    // pobierz mapping emailów
+    const uids = [...new Set(bookings.map(b=>b.userId))];
+    const map = {};
+    await Promise.all(uids.map(async uid=>{
+      const udoc = await getDoc(doc(db,"users",uid));
+      map[uid] = udoc.exists()?udoc.data().email:"";
+    }));
+    bookings = bookings.filter(b=> map[b.userId]?.toLowerCase()?.includes(filterEmail.toLowerCase()));
+  }
+
+  // sortowanie rosnąco
+  bookings.sort((a,b)=>{
+    const d = a.date.localeCompare(b.date);
+    return d!==0?d:a.hour.localeCompare(b.hour);
+  });
+
+  // 3) render: przeszłe vs przyszłe
+  // Za każdym razem musimy mieć emailMap jak wcześniej
+  const userIds = [...new Set(bookings.map(b=>b.userId))];
+  const emailMap = {};
+  await Promise.all(userIds.map(async uid=>{
+    const udoc = await getDoc(doc(db,"users",uid));
+    emailMap[uid] = udoc.exists()?udoc.data().email:"";
+  }));
+
+  bookings.forEach(b=>{
+    const tr = document.createElement("tr");
+    const row = `
+      <td>${b.date}</td>
+      <td>${emailMap[b.userId]||""}</td>
+      <td>${b.hour}${b.endHour ? ` – ${b.endHour}` : ""}</td>
+      <td>${b.petName} (${b.petSpecies})</td>
+      <td>${b.visitType}</td>
+    `;
+    if (b.date >= today) {
+      // przyszłe: z przyciskiem anuluj
+      tr.innerHTML = row + `
+        <td>
+          <button class="cancel-btn"
+                  data-id="${b.id}"
+                  data-user="${b.userId}">
+            Anuluj
+          </button>
+        </td>`;
+      futureBody.append(tr);
+    } else {
+      // przeszłe: bez przycisku
+      tr.innerHTML = row + `<td>—</td>`;
+      pastBody.append(tr);
+    }
+  });
+
+  historyStatus.textContent = `Znaleziono ${futureBody.children.length} przyszłych i ${pastBody.children.length} przeszłych wizyt.`;
+}
+
 
       tableBody.addEventListener("click", async e => {
         if (!e.target.matches(".cancel-btn")) return;
@@ -190,6 +290,7 @@
       });
 
       await loadAppointments();
+      await loadHistory("");
     }
   </script>
 </body>
