--- a/doctor.html
+++ b/doctor.html
@@ -69,9 +69,31 @@
     <section id="appointment-history" class="hidden">
   <h3>Historia wizyt klienta: <span id="history-email-label"></span></h3>
   <h4>Przyszłe wizyty</h4>
-  <table id="future-table">…</table>
+  <table id="future-table">
+    <thead>
+      <tr>
+        <th>Data</th>
+        <th>Godzina</th>
+        <th>Zwierzak</th>
+        <th>Rodzaj</th>
+        <th>Akcja</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
   <h4>Przeszłe wizyty</h4>
-  <table id="past-table">…</table>
+  <table id="past-table">
+    <thead>
+      <tr>
+        <th>Data</th>
+        <th>Godzina</th>
+        <th>Zwierzak</th>
+        <th>Rodzaj</th>
+        <th>Akcja</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
   <p id="history-status"></p>
 </section>
   </div>
