--- a/moje-wizyty.html
+++ b/moje-wizyty.html
@@ -13,11 +13,11 @@
     nav a:hover { text-decoration: underline; }
     .section { margin-bottom: 30px; }
     .visit-list { list-style: none; padding: 0; }
-    .visit-item { display: flex; justify-content: space-between; align-items: center; padding: 10px; border-bottom: 1px solid #eee; }
+    .visit-item { padding: 12px; border-bottom: 1px solid #eee; }
     .visit-item:last-child { border-bottom: none; }
-    .visit-info { font-size: 14px; }
+    .visit-info { font-size: 14px; line-height: 1.4; }
     .btn { padding: 6px 12px; border: none; border-radius: 4px; cursor: pointer; }
-    .btn-cancel { background: #d8000c; color: #fff; }
+    .btn-cancel { background: #d8000c; color: #fff; float: right; }
     .btn-cancel:hover { background: #b30009; }
   </style>
 </head>
@@ -41,7 +41,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
-    import { getFirestore, collection, query, where, getDocs, deleteDoc, doc, Timestamp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+    import { getFirestore, collection, query, where, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCZoVVfUPSyS7zELBqEsLNYuVdBqfSq-BE",
@@ -66,10 +66,7 @@
         return;
       }
 
-      const nowTs = Timestamp.now();
-      const nowDate = nowTs.toDate();
-
-      // Ścieżka do subkolekcji bookings
+      // Pobranie wizyt z subkolekcji
       const bookingsRef = collection(db, 'users', user.uid, 'bookings');
       const q = query(bookingsRef, where('userId', '==', user.uid));
       const snapshot = await getDocs(q);
@@ -78,39 +75,43 @@
         const data = docSnap.data();
         const id = docSnap.id;
 
-        // Konwersja daty wizyty
-        let visitDate;
-        if (data.date && typeof data.date.toDate === 'function') {
-          visitDate = data.date.toDate();
-        } else {
-          visitDate = new Date(data.date);
-        }
+        // Parsowanie daty i godzin wizyty
+        const dateStr = data.date; // format "YYYY-MM-DD"
+        const startTime = data.hour;   // format "HH:MM"
+        const endTime = data.endHour;  // format "HH:MM"
 
-        const info = `${visitDate.toLocaleDateString()} o ${visitDate.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'})} – ${data.service}`;
-
+        // Tworzymy element listy
         const li = document.createElement('li');
         li.classList.add('visit-item');
 
-        const span = document.createElement('span');
-        span.classList.add('visit-info');
-        span.textContent = info;
+        // Budujemy treść wizyty
+        const infoDiv = document.createElement('div');
+        infoDiv.classList.add('visit-info');
+        infoDiv.innerHTML = `
+          <strong>${new Date(dateStr).toLocaleDateString()} ${startTime}–${endTime}</strong><br>
+          Zwierzę: ${data.petName} (${data.petSpecies})<br>
+          Lekarz: ${data.doctorName}<br>
+          Typ wizyty: ${data.visitType || '-'}<br>
+          Miejsce: ${data.location}
+        `;
 
-        // Sprawdzamy, czy wizyta jest przyszła czy przeszła
-        if (visitDate >= nowDate) {
+        // Przyciski dla nadchodzących wizyt
+        const now = new Date();
+        const visitStart = new Date(`${dateStr}T${startTime}`);
+        if (visitStart >= now) {
           const btn = document.createElement('button');
           btn.classList.add('btn', 'btn-cancel');
           btn.textContent = 'Anuluj';
           btn.addEventListener('click', async () => {
             if (confirm('Czy na pewno chcesz anulować tę wizytę?')) {
-              // Poprawna ścieżka do dokumentu w subkolekcji
               await deleteDoc(doc(db, 'users', user.uid, 'bookings', id));
               li.remove();
             }
           });
-          li.append(span, btn);
+          li.append(infoDiv, btn);
           upcomingList.append(li);
         } else {
-          li.append(span);
+          li.append(infoDiv);
           pastList.append(li);
         }
       });
