--- a/moje-wizyty.html
+++ b/moje-wizyty.html
@@ -41,7 +41,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
-    import { getFirestore, collection, query, where, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+    import { getFirestore, collection, query, where, orderBy, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCZoVVfUPSyS7zELBqEsLNYuVdBqfSq-BE",
@@ -66,9 +66,14 @@
         return;
       }
 
-      // Pobranie wizyt z subkolekcji
+      // Pobranie wizyt z subkolekcji, posortowane od najwcześniejszych
       const bookingsRef = collection(db, 'users', user.uid, 'bookings');
-      const q = query(bookingsRef, where('userId', '==', user.uid));
+      const q = query(
+        bookingsRef,
+        where('userId', '==', user.uid),
+        orderBy('date', 'asc'),
+        orderBy('hour', 'asc')
+      );
       const snapshot = await getDocs(q);
 
       snapshot.forEach(docSnap => {
