--- a/moje-wizyty.html
+++ b/moje-wizyty.html
@@ -1,33 +1,56 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Moje wizyty | BKRJ Vet</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>BKRJ Vet – Moje wizyty</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f7f7f7; color: #333; }
-    .container { max-width: 800px; margin: 60px auto; background: #fff; padding: 20px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-radius: 8px; }
-    h2 { text-align: center; color: #4CAF50; margin-bottom: 20px; }
-    nav { text-align: center; margin-bottom: 30px; }
-    nav a { margin: 0 15px; color: #4CAF50; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
+    body { margin: 0; font-family: Arial, sans-serif; line-height: 1.6; background: #f7f7f7; color: #333; }
+    header { background: #4CAF50; color: #fff; padding: 15px 0; }
+    .navbar { display: flex; justify-content: space-between; align-items: center; max-width: 1200px; margin: 0 auto; padding: 0 20px; }
+    .navbar a { color: #fff; text-decoration: none; margin: 0 15px; font-weight: bold; }
+    .navbar a:hover { text-decoration: underline; }
+
+    .container { max-width: 800px; margin: 40px auto; padding: 0 20px; }
+    h2 { color: #4CAF50; margin-bottom: 20px; text-align: center; }
+    nav.page-nav { text-align: center; margin-bottom: 30px; }
+    nav.page-nav a { margin: 0 15px; color: #4CAF50; text-decoration: none; font-weight: bold; }
+    nav.page-nav a.active { text-decoration: underline; }
+
     .section { margin-bottom: 30px; }
     .visit-list { list-style: none; padding: 0; }
-    .visit-item { padding: 12px; border-bottom: 1px solid #eee; }
-    .visit-item:last-child { border-bottom: none; }
+    .visit-item { background: #fff; padding: 15px; margin-bottom: 10px; border-radius: 5px; box-shadow: 0 1px 4px rgba(0,0,0,0.1); position: relative; }
     .visit-info { font-size: 14px; line-height: 1.4; }
-    .btn { padding: 6px 12px; border: none; border-radius: 4px; cursor: pointer; }
-    .btn-cancel { background: #d8000c; color: #fff; float: right; }
+    .btn-cancel { position: absolute; top: 15px; right: 15px; padding: 6px 12px; border: none; border-radius: 4px; background: #d8000c; color: #fff; cursor: pointer; }
     .btn-cancel:hover { background: #b30009; }
+
+    footer { background: #f4f4f4; padding: 20px 0; margin-top: 40px; }
+    footer .container { display: flex; justify-content: space-between; flex-wrap: wrap; }
+    footer p { margin: 5px 0; }
   </style>
 </head>
 <body>
+  <header>
+    <div class="navbar">
+      <div class="logo"><h1>BKRJ Vet</h1></div>
+      <nav id="nav-bar">
+        <a href="index.html">Strona główna</a>
+        <a href="umow-wizyte.html">Umów wizytę</a>
+        <a href="moje-wizyty.html" class="active">Moje wizyty</a>
+        <a href="#about">O nas</a>
+        <a href="#contact">Kontakt</a>
+        <a href="konto.html">Moje Konto</a>
+      </nav>
+    </div>
+  </header>
+
   <div class="container">
     <h2>Moje wizyty</h2>
-    <nav>
+    <nav class="page-nav">
       <a href="umow-wizyte.html">Umów wizytę</a>
-      <a href="moje-wizyty.html">Moje wizyty</a>
+      <a href="moje-wizyty.html" class="active">Moje wizyty</a>
     </nav>
+
     <div class="section">
       <h3>Nadchodzące wizyty</h3>
       <ul id="upcoming-list" class="visit-list"></ul>
@@ -37,6 +60,20 @@
       <ul id="past-list" class="visit-list"></ul>
     </div>
   </div>
+
+  <footer>
+    <div class="container">
+      <div>
+        <p>&copy; 2025 BKRJ Vet. Wszelkie prawa zastrzeżone.</p>
+      </div>
+      <div>
+        <p>Godziny otwarcia:</p>
+        <p>Poniedziałek – Piątek: 8:00 – 18:00</p>
+        <p>Sobota: 9:00 – 14:00</p>
+        <p>Niedziela: Nieczynne</p>
+      </div>
+    </div>
+  </footer>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
@@ -52,7 +89,6 @@
       appId: "1:289704325759:web:844ebae6cff71bbf40854a",
       measurementId: "G-EH0EC8NKXC"
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
@@ -66,7 +102,7 @@
         return;
       }
 
-      // Pobranie wizyt z subkolekcji, posortowane od najwcześniejszych
+      // Pobranie wizyt z subkolekcji, posortowane chronologicznie
       const bookingsRef = collection(db, 'users', user.uid, 'bookings');
       const q = query(
         bookingsRef,
@@ -79,17 +115,13 @@
       snapshot.forEach(docSnap => {
         const data = docSnap.data();
         const id = docSnap.id;
+        const dateStr = data.date;
+        const startTime = data.hour;
+        const endTime = data.endHour;
 
-        // Parsowanie daty i godzin wizyty
-        const dateStr = data.date; // format "YYYY-MM-DD"
-        const startTime = data.hour;   // format "HH:MM"
-        const endTime = data.endHour;  // format "HH:MM"
-
-        // Tworzymy element listy
         const li = document.createElement('li');
         li.classList.add('visit-item');
 
-        // Budujemy treść wizyty
         const infoDiv = document.createElement('div');
         infoDiv.classList.add('visit-info');
         infoDiv.innerHTML = `
@@ -97,15 +129,14 @@
           Zwierzę: ${data.petName} (${data.petSpecies})<br>
           Lekarz: ${data.doctorName}<br>
           Typ wizyty: ${data.visitType || '-'}<br>
-          Miejsce: ${data.location}
+          Lokal: ${data.location}
         `;
 
-        // Przyciski dla nadchodzących wizyt
         const now = new Date();
         const visitStart = new Date(`${dateStr}T${startTime}`);
         if (visitStart >= now) {
           const btn = document.createElement('button');
-          btn.classList.add('btn', 'btn-cancel');
+          btn.classList.add('btn-cancel');
           btn.textContent = 'Anuluj';
           btn.addEventListener('click', async () => {
             if (confirm('Czy na pewno chcesz anulować tę wizytę?')) {
