--- a/rejestracja.html
+++ b/rejestracja.html
@@ -177,7 +177,8 @@
           uid: uid,
           email: email,
           role: "user",
-          created: new Date().toISOString()
+          created: new Date().toISOString(),
+          branch: null
         });
 
         // c) Przekierowanie na stronę główną
