--- a/admin.html
+++ b/admin.html
@@ -80,6 +80,7 @@
       <input type="text" id="offer-name" />
       <label for="offer-duration">Czas trwania (min)</label>
       <input type="number" id="offer-duration" min="1" />
+      <label for="offer-price">Cena (PLN)</label>
       <input type="number" id="offer-price" min="0" step="0.01" />
       <button id="add-offer">Dodaj ofertę</button>
       <p id="offer-status"></p>
