--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ button:hover {
         <a href="index.html">Strona główna</a>
         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
         <a href="moje-wizyty.html" id="nav-wizyta" style="display: none;">Moje wizyty</a>
+        <a href="cennik.html" id="nav-cennik">Cennik</a>
         <a href="rejestracja.html" id="nav-rejestracja">Rejestracja</a>
         <a href="login.html" id="nav-logowanie">Logowanie</a>
         <a href="#about">O nas</a>
