--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -59,6 +59,7 @@
       <div class="logo"><h1>BKRJ Vet</h1></div>
       <nav>
         <a href="index.html">Strona główna</a>
+        <a href="cennik.html">Cennik</a>
         <a href="umow-wizyte.html">Umów wizytę</a>
         <a href="konto.html">Moje Konto</a>
       </nav>
