--- a/konto.html
+++ b/konto.html
@@ -160,6 +160,8 @@
       <nav id="nav-bar">
         <a href="index.html">Strona główna</a>
         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
+        <a href="moje-wizyty.html">Moje wizyty</a>
+        <a href="cennik.html">Cennik</a>
         <a href="rejestracja.html" id="nav-rejestracja">Rejestracja</a>
         <a href="login.html" id="nav-logowanie">Logowanie</a>
         <span id="user-greeting" class="user-greeting" style="display: none;"></span>
