--- a/moje-wizyty.html
+++ b/moje-wizyty.html
@@ -37,6 +37,7 @@
         <a href="index.html">Strona główna</a>
         <a href="umow-wizyte.html">Umów wizytę</a>
         <a href="moje-wizyty.html" class="active">Moje wizyty</a>
+        <a href="cennik.html">Cennik</a>
         <a href="index.html#about">O nas</a>
         <a href="index.html#contact">Kontakt</a>
         <a href="konto.html">Moje Konto</a>
