--- a/umow-wizyte.html
+++ b/umow-wizyte.html
@@ -90,6 +90,7 @@
         <a href="index.html">Strona główna</a>
         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
         <a href="moje-wizyty.html">Moje wizyty</a>
+        <a href="cennik.html">Cennik</a>
         <a href="index.html#about">O nas</a>
         <a href="index.html#contact">Kontakt</a>
         <a href="konto.html" id="nav-konto">Moje Konto</a>
